plugins {
    id 'java-library'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':core')
    compileOnly 'org.jetbrains:annotations:21.0.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }

    modularity.inferModulePath = true
}

compileJava {
    options.compilerArgs << "--enable-preview"
}
